crates/swc_ecma_parser/tests/test262-error-references/fail/73b0a0c9a26e1950.js.stderr
error: Expected 4 hex characters
 --> $DIR/tests/test262-parser/fail/73b0a0c9a26e1950.js:1:2
  |
1 | a\u113
  |  ^^^^^

